--- a/public/css/default/index.css
+++ b/public/css/default/index.css
@@ -9,6 +9,7 @@ html body {
 }
 html body .form-label {
   font-weight: bold;
+  margin: 0rem;
 }
 html body h1, html body h2, html body h3, html body h4, html body legend {
   color: goldenrod;
