--- a/public/css/notice/edit.scss
+++ b/public/css/notice/edit.scss
@@ -1,4 +1,3 @@
-
 .notice-edit{
     display: flex;
     flex-flow: column;
@@ -11,12 +10,13 @@
     }
 
     form{
-        max-width: 75%;
-        min-width: 95%;
+        width: 95%;
+        max-width: 500px;
         background: black;
         color: white;
-        padding: 1rem;
+        padding: .5rem;
         border-radius: .25rem;
+        margin-bottom: .5rem;
         box-shadow: 0rem 0rem .5rem gray;
 
         .heading{
@@ -34,11 +34,10 @@
 
         .btn-container{
             width: 100%;
+            padding-top: .5rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-top: .5rem;
         }
     }
 }
-
