--- a/public/css/payment/create.scss
+++ b/public/css/payment/create.scss
@@ -10,21 +10,14 @@
     }
 
     form{
-        max-width: 95%;
-        min-width: 75%;
+        width: 95%;
+        max-width: 500px;
         background: black;
         color: white;
-        padding: 1rem;
+        padding: .5rem;
         border-radius: .25rem;
+        margin-bottom: .5rem;
         box-shadow: 0rem 0rem .5rem gray;
-
-        .heading{
-            height: 5rem;
-        }
-
-        .body{
-            height: 10rem;
-        }
 
         .payment-create-error{
             color: red;
@@ -33,10 +26,10 @@
 
         .btn-container{
             width: 100%;
+            padding-top: .5rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-top: .5rem;
         }
     }
 }
