--- a/public/css/user/edit.scss
+++ b/public/css/user/edit.scss
@@ -1,4 +1,3 @@
-
 .user-edit{
     display: flex;
     flex-flow: column;
@@ -11,12 +10,13 @@
     }
 
     form{
-        max-width: 95%;
-        min-width: 500px;
+        width: 95%;
+        max-width: 500px;
         background: black;
         color: white;
-        padding: 1rem;
+        padding: .5rem;
         border-radius: .25rem;
+        margin-bottom: .5rem;
         box-shadow: 0rem 0rem .5rem gray;
 
         .user-edit-error{
@@ -26,11 +26,10 @@
 
         .btn-container{
             width: 100%;
+            padding-top: .5rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-top: .5rem;
         }
     }
 }
-
