--- a/public/css/adjustment/show.css
+++ b/public/css/adjustment/show.css
@@ -28,6 +28,14 @@
   font-weight: bold;
   border-bottom: 0.1rem dashed gray;
 }
+.adjustment-show .info-container label a {
+  text-decoration: none;
+  color: white;
+}
+.adjustment-show .info-container label a:hover {
+  text-decoration: underline;
+  font-weight: bold;
+}
 .adjustment-show .info-container label span {
   font-weight: normal;
   font-style: italic;
