--- a/public/css/member/show.scss
+++ b/public/css/member/show.scss
@@ -117,6 +117,17 @@
                 text-align: center;
             }
 
+            td{
+                a{
+                    color: white;
+                    text-decoration: none;
+
+                    &:hover{
+                        text-decoration: underline;
+                    }
+                }
+            }
+
             .clickable{
                 cursor: pointer;
             }
