--- a/public/css/month/show.scss
+++ b/public/css/month/show.scss
@@ -66,6 +66,15 @@
                     td{
                         vertical-align: middle;
                         text-align: center;
+
+                        a{
+                            color: white;
+                            text-decoration: none;
+
+                            &:hover{
+                                text-decoration: underline;
+                            }
+                        }
                     }
 
                     .td-flex{
