--- a/public/css/member/show.css
+++ b/public/css/member/show.css
@@ -8,6 +8,12 @@
   justify-content: center;
   align-items: center;
 }
+.member-show .top .btn-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.25rem;
+}
 .member-show .image-viewer {
   width: 100%;
   display: flex;
@@ -155,8 +161,8 @@
     justify-content: space-between;
   }
   .member-show .top h2 {
-    transform: translateX(-40%);
-    margin-left: 40%;
+    transform: translateX(-30%);
+    margin-left: 30%;
   }
   .member-show .details-container .info-container label {
     width: 90%;
@@ -173,8 +179,8 @@
 }
 @media screen and (min-width: 920px) {
   .member-show .top h2 {
-    margin-left: 50%;
-    transform: translateX(-50%);
+    margin-left: 45%;
+    transform: translateX(-45%);
   }
   .member-show .details-container {
     flex-flow: row;
