--- a/public/css/member/show.scss
+++ b/public/css/member/show.scss
@@ -11,9 +11,11 @@
         justify-content: center;
         align-items: center;
 
-        h2{
-            // margin-left: 50%;
-            // transform: translateX(-50%);
+        .btn-container{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: .25rem;
         }
     }
 
@@ -194,8 +196,8 @@
             justify-content: space-between;
 
             h2{
-                transform: translateX(-40%);
-                margin-left: 40%;
+                transform: translateX(-30%);
+                margin-left: 30%;
             }
         }
 
@@ -227,8 +229,8 @@
         .top{
 
             h2{
-                margin-left: 50%;
-                transform: translateX(-50%);
+                margin-left: 45%;
+                transform: translateX(-45%);
             }
         }
 
