--- a/public/css/default/index.css
+++ b/public/css/default/index.css
@@ -10,6 +10,7 @@ html body {
 html body .form-label {
   font-weight: bold;
   margin: 0rem;
+  color: #9d3b18;
 }
 html body h1, html body h2, html body h3, html body h4, html body legend {
   color: goldenrod;
@@ -161,10 +162,14 @@ html body main h1, html body main h6 {
 }
 html body main .headlines {
   min-height: 50vh;
+  width: 100%;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  border: 0.1rem solid gray;
+  background-image: url("/images/pexels-fwstudio-129731.jpg");
+  box-shadow: 0rem 0rem 0.5rem gray inset;
 }
 html body main .headlines h6 {
   text-align: right;
@@ -439,6 +444,25 @@ html body .loading-hide::after {
   -webkit-animation: none;
           animation: none;
 }
+html body .up-arrow {
+  position: fixed;
+  left: 1rem;
+  bottom: 1rem;
+  font-size: 2rem;
+  transition: all 1s;
+}
+html body .up-arrow span svg {
+  stroke: white;
+  fill: gray;
+  animation: learn_more 1s ease-in-out 0s infinite alternate-reverse;
+}
+html body .up-arrow span:hover {
+  cursor: pointer;
+}
+html body .up-arrow-hide {
+  left: -10rem;
+  transition: all 1s;
+}
 html body .hide {
   display: none;
 }
@@ -460,6 +484,22 @@ html body .hide {
     transform: rotateY(360deg);
   }
 }
+@-webkit-keyframes heading-animation {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(2);
+  }
+}
+@keyframes heading-animation {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(2);
+  }
+}
 @-webkit-keyframes loading {
   to {
     rotate: 1turn;
@@ -470,7 +510,26 @@ html body .hide {
     rotate: 1turn;
   }
 }
+@-webkit-keyframes learn_more {
+  100% {
+    transform: translateY(-5px);
+  }
+  0% {
+    transform: translateY(5px);
+  }
+}
+@keyframes learn_more {
+  100% {
+    transform: translateY(-5px);
+  }
+  0% {
+    transform: translateY(5px);
+  }
+}
 @media screen and (min-width: 640px) {
+  html body main .headlines h1 {
+    font-size: 3rem;
+  }
   html body .home-notice-view {
     min-width: 500px;
     min-height: 50vh;
@@ -511,6 +570,9 @@ html body .hide {
   }
   html body header nav .center-ul-open {
     display: none;
+  }
+  html body main .headlines h1 {
+    font-size: 4rem;
   }
   html body main .top {
     flex-flow: row;
